unpackaged/main/default/objects/Single_Barrel_Brand_Setting__mdt/Single_Barrel_Brand_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used in the Single Barrel Program visual flow to display all the available brands and the program types that each brand offers</description>
    <label>Single Barrel Brand Setting</label>
    <pluralLabel>Single Barrel Brand Settings</pluralLabel>
</CustomObject>