unpackaged/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Flavor__c.field-meta.xml
<CustomField>
    <fullName>Flavor__c</fullName>
    <label>Flavor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bourbon</fullName>
                <default>true</default>
                <label>Bourbon</label>
            </value>
            <value>
                <fullName>Rye</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>