unpackaged/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>