unpackaged/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clermont</fullName>
                <default>true</default>
                <label>Clermont</label>
            </value>
            <value>
                <fullName>Loretto</fullName>
            </value>
            <value>
                <fullName>La Alteña Distillery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>