unpackaged/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Program_Types__c.field-meta.xml
<CustomField>
    <fullName>Program_Types__c</fullName>
    <label>Program Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sample Kit;Trip and Tour;Distiller's Choice;Split Barrel</fullName>
                <default>true</default>
                <label>Sample Kit;Trip and Tour;Distiller's Choice;Split Barrel</label>
            </value>
            <value>
                <fullName>Sample Kit;Trip and Tour;Distiller's Choice</fullName>
            </value>
            <value>
                <fullName>Trip and Tour;Distiller's Choice</fullName>
            </value>
            <value>
                <fullName>Sample Kit;Distiller's Choice</fullName>
            </value>
            <value>
                <fullName>Sample Kit</fullName>
            </value>
            <value>
                <fullName>Trip and Tour</fullName>
            </value>
            <value>
                <fullName>Distiller's Choice</fullName>
            </value>
            <value>
                <fullName>Trip and Tour;Remote Selection;Recent Recipes</fullName>
            </value>
            <value>
                <fullName>Trip and Tour;Remote Selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>