unpackaged/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Recent_Recipes__c.field-meta.xml
<CustomField>
    <fullName>Recent_Recipes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recent Recipes</label>
    <type>Checkbox</type>
</CustomField>