unpackaged/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Remote_Selection__c.field-meta.xml
<CustomField>
    <fullName>Remote_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Selection</label>
    <type>Checkbox</type>
</CustomField>