unpackaged/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Sample_Kit__c.field-meta.xml
<CustomField>
    <fullName>Sample_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sample Kit</label>
    <type>Checkbox</type>
</CustomField>