unpackaged/main/default/objects/Single_Barrel_Brand_Setting__mdt/fields/Split_Barrel__c.field-meta.xml
<CustomField>
    <fullName>Split_Barrel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Barrel</label>
    <type>Checkbox</type>
</CustomField>