unpackaged/main/default/objects/Single_Barrel_Brand_Setting__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>DeveloperName</columns>
    <columns>isActive__c</columns>
    <columns>Order__c</columns>
    <columns>hasApplication__c</columns>
    <columns>MasterLabel</columns>
    <columns>Brand__c</columns>
    <columns>Static_Resource_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
    <language>en_US</language>
</ListView>